pushed all my attempts

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,47 @@
 *.txt
+Failed Attempts + Helpers/dataset ops/final_dataset.zip
+Failed Attempts + Helpers/dataset ops/msa/أحسن القصص
+Failed Attempts + Helpers/dataset ops/msa/أقلام متمردة
+Failed Attempts + Helpers/dataset ops/msa/أهمية الجوال
+Failed Attempts + Helpers/dataset ops/msa/ارتشف قهوتك
+Failed Attempts + Helpers/dataset ops/msa/استعراض لمضامين الرسائل
+Failed Attempts + Helpers/dataset ops/msa/الترتيب المعجمي
+Failed Attempts + Helpers/dataset ops/msa/الحوار المتمدن
+Failed Attempts + Helpers/dataset ops/msa/الدعاء لصاحب الأمر
+Failed Attempts + Helpers/dataset ops/msa/الزاهد
+Failed Attempts + Helpers/dataset ops/msa/السؤال الحارق
+Failed Attempts + Helpers/dataset ops/msa/السعادة المفقودة
+Failed Attempts + Helpers/dataset ops/msa/الطريقة المحمدية
+Failed Attempts + Helpers/dataset ops/msa/الفلوس تغير النفوس
+Failed Attempts + Helpers/dataset ops/msa/اللوحات الفنية
+Failed Attempts + Helpers/dataset ops/msa/الوظيفة الدرقاوية
+Failed Attempts + Helpers/dataset ops/msa/الوظيفة الشاذلية
+Failed Attempts + Helpers/dataset ops/msa/بيت الحاج عربي
+Failed Attempts + Helpers/dataset ops/msa/حمى اشتياق
+Failed Attempts + Helpers/dataset ops/msa/خطبة 01
+Failed Attempts + Helpers/dataset ops/msa/خطبة 02
+Failed Attempts + Helpers/dataset ops/msa/خطبة 03
+Failed Attempts + Helpers/dataset ops/msa/خطبة 04
+Failed Attempts + Helpers/dataset ops/msa/خطبة 05
+Failed Attempts + Helpers/dataset ops/msa/خطبة 06
+Failed Attempts + Helpers/dataset ops/msa/دروس معهد تعليم اللغة
+Failed Attempts + Helpers/dataset ops/msa/دعوات فتح الله
+Failed Attempts + Helpers/dataset ops/msa/زكام الزخم
+Failed Attempts + Helpers/dataset ops/msa/زيارة العقيلة
+Failed Attempts + Helpers/dataset ops/msa/سفينة نوح
+Failed Attempts + Helpers/dataset ops/msa/طفل على مفرق الطرق
+Failed Attempts + Helpers/dataset ops/msa/في الحب كل شيء
+Failed Attempts + Helpers/dataset ops/msa/في كل يوم تولد طفلة
+Failed Attempts + Helpers/dataset ops/msa/قصة نافع بن الأزرق
+Failed Attempts + Helpers/dataset ops/msa/كبرياء لن ينكسر بريد تائه
+Failed Attempts + Helpers/dataset ops/msa/كل مستوف أكله
+Failed Attempts + Helpers/dataset ops/msa/لا تسأل الناس شيئا
+Failed Attempts + Helpers/dataset ops/msa/ليلى تعرف طريقها
+Failed Attempts + Helpers/dataset ops/msa/مؤسسة الهوية للدراسات
+Failed Attempts + Helpers/dataset ops/msa/مجرب في كل شيء مثلنا
+Failed Attempts + Helpers/dataset ops/msa/مرآن تمضغ أزرار ثوبي
+Failed Attempts + Helpers/dataset ops/msa/من رمل الاسكندرية
+Failed Attempts + Helpers/dataset ops/msa/من سار على الدرب وصل
+Failed Attempts + Helpers/dataset ops/msa/من كسر الاصنام
+Failed Attempts + Helpers/dataset ops/msa/هل للحب لغة
+Failed Attempts + Helpers/dataset ops/msa/وهيب وهبة_ علبة من ذهب
